Add mobile nav to all screens

--- a/sensor_config.html
+++ b/sensor_config.html
@@ -17,17 +17,17 @@
       </div>
       <nav class="nav">
         <ul>
-          <li><a href="config.html"><span>Konfiguracja użytkownika</span></a></li>
-          <!-- <li><a href="#"><span>Konfiguracja sensorów</span></a></li> -->
-          <li><a href="relay_config.html"><span>Konfiguracja przekaźnika</span></a></li>    
+          <li><a href="config.html"><span class="nav-link-span">Konfiguracja użytkownika</span></a></li>
+          <!-- <li><a href="sensor_config.html"><span class="nav-link-span">Konfiguracja sensorów</span></a></li> -->
+          <li><a href="relay_config.html"><span class="nav-link-span">Konfiguracja przekaźnika</span></a></li>    
         </ul>   
       </nav>
       <nav class="nav-mobile">
         <div class="burger"><span class="line">_</span></div>
-        <ul>
-          <li><a href="config.html"><span>Konfiguracja użytkownika</span></a></li>
-          <!-- <li><a href="#"><span>Konfiguracja sensorów</span></a></li> -->
-          <li><a href="relay_config.html"><span>Konfiguracja przekaźnika</span></a></li>   
+        <ul class="nav-mobile-list nav-hidden">
+          <li><a href="config.html"><span class="nav-link-span">Konfiguracja użytkownika</span></a></li>
+          <!-- <li><a href="sensor_config.html"><span class="nav-link-span">Konfiguracja sensorów</span></a></li> -->
+          <li><a href="relay_config.html"><span class="nav-link-span">Konfiguracja przekaźnika</span></a></li>
         </ul>   
       </nav>
     </header> 
@@ -63,4 +63,5 @@
   </div>
   
 </body>
+<script src="script.js"></script>
 </html>
