--- a/config.html
+++ b/config.html
@@ -17,17 +17,17 @@
       </div>
       <nav class="nav">
         <ul>
-          <!-- <li><a href="#"><span class="nav-link">Konfiguracja użytkownika</span></a></li> -->
-          <li><a href="sensor_config.html"><span class="nav-link">Konfiguracja sensorów</span></a></li>
-          <li><a href="relay_config.html"><span class="nav-link">Konfiguracja przekaźnika</span></a></li>    
+          <!-- <li><a href="config.html"><span class="nav-link-span">Konfiguracja użytkownika</span></a></li> -->
+          <li><a href="sensor_config.html"><span class="nav-link-span">Konfiguracja sensorów</span></a></li>
+          <li><a href="relay_config.html"><span class="nav-link-span">Konfiguracja przekaźnika</span></a></li>    
         </ul>   
       </nav>
       <nav class="nav-mobile">
         <div class="burger"><span class="line">_</span></div>
         <ul class="nav-mobile-list nav-hidden">
-          <!-- <li><a href="#"><span>Konfiguracja użytkownika</span></a></li> -->
-          <li><a href="sensor_config.html"><span>Konfiguracja sensorów</span></a></li>
-          <li><a href="relay_config.html"><span>Konfiguracja przekaźnika</span></a></li>    
+          <!-- <li><a href="config.html"><span class="nav-link-span">Konfiguracja użytkownika</span></a></li> -->
+          <li><a href="sensor_config.html"><span class="nav-link-span">Konfiguracja sensorów</span></a></li>
+          <li><a href="relay_config.html"><span class="nav-link-span">Konfiguracja przekaźnika</span></a></li>    
         </ul>   
       </nav>
     </header> 
